--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 ical4china.juhe.app-key=${your key}
+
+spring.datasource.url=jdbc:h2:file:./ical4china
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=ical4china
+spring.datasource.password=ical4china
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
